# AmpFuzz

./: .gitignore  .gitmodules  01_prep_package.py  03_fuzz_target.py  04_sym_target.py  05_honeypot_syn.py  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: cond_stmt_base.rs  config.rs  defs.rs  lib.rs  listen_semaphore.rs
dockerfiles/: fuzzer.dockerfile
eval/01_collect_targets/: Makefile  matches.txt  patterns.csv  patterns.txt
eval/01_collect_targets/apt-file-docker/: Dockerfile
eval/02_filter_matches/: Makefile  false_positives.txt  matches.txt  old_matches.txt  true_positives.txt
eval/02_filter_matches/package-check-docker/: Dockerfile
eval/03_join_matches/: Makefile  fetch_versions.sh  matches.txt  package_matches.json  patterns.csv  versions.txt
eval/04_create_eval_dir/: Makefile  gen_makefile.py
eval/04_create_eval_dir/eval/: Makefile  build_base.sh  build_fuzz.sh  build_sym.sh  build_target.sh  final_eval.json  gen_makefile.py  stats.py
eval/04_create_eval_dir/eval/memcached/_usr_bin_memcached/11211/: args
eval/04_create_eval_dir/eval_scripts/: 03_plot_grid.py
eval/04_create_eval_dir/hpsynth_scripts/: main.py
fuzzer/: Cargo.toml
fuzzer/src/: branches.rs  byte_count.rs  check_dep.rs  command.rs  fuzz_main.rs
fuzzer/src/cond_stmt/: cond_stmt.rs
fuzzer/src/depot/: depot.rs  qpriority.rs
fuzzer/src/dyncfg/: cfg.rs
fuzzer/src/executor/: executor.rs  forksrv.rs  recv_thread.rs  status_type.rs
fuzzer/src/search/: amp.rs
fuzzer/src/stats/: chart.rs  local.rs  show.rs
harnesses/inetd/: CMakeLists.txt
honeypot_synthesis/: main.py
honeypot_synthesis/examples/: sym__usr_sbin_in.ntalkd_518  sym__usr_sbin_in.talkd_517
llvm_mode/: CMakeLists.txt
llvm_mode/compiler/: CMakeLists.txt  make_target  pre_clang  pre_clang++
llvm_mode/dfsan_rt/dfsan/: dfsan_custom.cc
llvm_mode/libcxx/: CMakeLists.txt
llvm_mode/pass/: CMakeLists.txt
runtime/src/: len_label.rs  logger.rs  track.rs
runtime_common/: Cargo.toml
runtime_common/src/: runtime_hooks.rs
runtime_fast/src/: fast.rs
