cmake_minimum_required(VERSION 3.4)
if(NOT LLVM_FOUND)
    find_package(LLVM 11.0 CONFIG)
    if(NOT LLVM_FOUND)
        find_package(LLVM 11.1 CONFIG)
    endif()
    message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
    message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
    list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
    include(AddLLVM)
endif()

project(angora_llvm_mode VERSION 1.2.2 LANGUAGES C CXX ASM)

include_directories(include)
include_directories(dfsan_rt)
include_directories(../runtime/include)

add_subdirectory(compiler)
add_subdirectory(pass)
add_subdirectory(rules)
add_subdirectory(external_lib)
add_subdirectory(dfsan_rt)
add_subdirectory(libcxx)
